--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Exhausted-Pigeon.xyz"
+      content="Blockchain and smart contract engineering. Exhausted Pigeon provides solution for every aspect of your crypto projects, both on- and off-chain"
     />
+    <meta name=”robots” content="index, follow">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/xp_icoBg.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Exhausted Pigeon</title>
