--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,10 @@
     <meta name=”robots” content="index, follow">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/xp_icoBg.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Exhausted Pigeon</title>
+    <title>Exhausted Pigeon Blockchain Engineering</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to see this page.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
