--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Blockchain and smart contract engineering. Exhausted Pigeon provides solution for every aspect of your crypto projects, both on- and off-chain"
+      content="software engineering. Exhausted Pigeon provides solution for every aspect of your projects"
     />
     <meta name=”robots” content="index, follow">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/xp_icoBg.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Exhausted Pigeon Blockchain Engineering</title>
+    <title>Exhausted Pigeon Software Engineering</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to see this page.</noscript>
